# pixdraft

./: .gitignore  README.md  performance_analyzer.py  performance_data_schema.py  pyproject.toml  test_engine.py
.github/workflows/: ci.yml
src/: gui_demo.py  main.py
src/engine/: Cargo.toml  pyproject.toml
src/engine/src/: image_core.rs  lib.rs  node_system.rs
src/engine/src/filters/: basic.rs  blur.rs  color.rs  mod.rs
